--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend",
-  "version": "1.0",
+  "version": "1.0.0",
   "description": "Heat - Backend",
   "main": "server.ts",
   "repository": "git@github.com:Christiangsn/Heat---Backend.git",
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files --no-copy-ignored",
     "start": "node -r dotenv/config dist/server.js",
-    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules -r dotenv/config --exit-child src/server.ts"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
@@ -17,11 +17,15 @@
     "@babel/node": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
+    "@types/axios": "^0.14.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/socket.io": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
-    "eslint": "^8.0.1",
+    "eslint": "^7.12.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.22.1",
@@ -29,11 +33,18 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^5.0.0",
+    "prisma": "^3.2.1",
     "ts-node-dev": "^1.1.7",
     "typescript": "^4.4.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@prisma/client": "^3.2.1",
+    "axios": "^0.23.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "socket.io": "^4.3.1"
   },
   "peerDependencies": {
     "webpack": "^5.58.2"
